
HIGHLIGHTS

• |hl-DiffTextAdd| highlights added text within a changed line.

LSP

• |vim.lsp.ClientConfig| gained `workspace_required`.
• Support for `textDocument/documentColor`: |lsp-document_color|
  https://microsoft.github.io/language-server-protocol/specification/#textDocument_documentColor
• The `textDocument/diagnostic` request now includes the previous id in its
  parameters.

LUA

• Lua type annotations for `vim.uv`.
• |vim.hl.range()| now allows multiple timed highlights.
• |vim.tbl_extend()| and |vim.tbl_deep_extend()| now accept a function behavior argument.

OPTIONS

• 'autowriteall' writes all buffers upon receiving `SIGHUP`, `SIGQUIT` or `SIGTSTP`.
• 'chistory' and 'lhistory' set size of the |quickfix-stack|.
• 'completefuzzycollect' enables fuzzy collection of candidates for (some)
  |ins-completion| modes.
• 'completeopt' flag "nearset" sorts completion results by distance to cursor.
• 'diffopt' `inline:` configures diff highlighting for changes within a line.
• 'pummaxwidth' sets maximum width for the completion popup menu.
• 'winborder' "bold" style.
• |g:clipboard| accepts a string name to force any builtin clipboard tool.

PERFORMANCE

• todo

PLUGINS

• Customize :checkhealth by handling a `FileType checkhealth` event.
  |health-usage|

STARTUP

• todo

TERMINAL

• |nvim_open_term()| can be called with a non-empty buffer. The buffer
  contents are piped to the PTY and displayed as terminal output.

TREESITTER

• todo

TUI

• todo

UI

• |:checkhealth| shows a summary in the header for every healthcheck.
• |ui-multigrid| provides composition information and absolute coordinates.
• `vim._extui` provides an experimental commandline and message UI intended to
  replace the message grid in the TUI.
• Error messages are more concise:
  • "Error detected while processing:" changed to "Error in:".
  • "Error executing Lua:" changed to "Lua:".

VIMSCRIPT

• |cmdcomplete_info()| gets current cmdline completion info.
